<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewRatingNum"
        android:layout_width="96dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/textDefaultRating"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textViewRating"
        app:layout_constraintTop_toBottomOf="@+id/spinnerFrequency" />

    <TextView
        android:id="@+id/textViewRating"
        android:layout_width="272dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:text="@string/textRating"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewFrequency" />

    <TextView
        android:id="@+id/textViewFrequency"
        android:layout_width="272dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:text="@string/textFrequency"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewGender" />

    <EditText
        android:id="@+id/editTextAge"
        android:layout_width="272dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/textHintAge"
        android:inputType="number"
        android:textColorHint="#757575"
        app:layout_constraintStart_toEndOf="@+id/textViewName"
        app:layout_constraintTop_toBottomOf="@+id/editTextName" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/textSurvey"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="96dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:gravity="center_vertical"
        android:text="@string/textName"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

    <TextView
        android:id="@+id/textViewAge"
        android:layout_width="96dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:text="@string/textAge"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewName" />

    <TextView
        android:id="@+id/textViewGender"
        android:layout_width="96dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:text="@string/textGender"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAge" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="272dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="48dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/textHintName"
        android:inputType="textPersonName"
        android:textColorHint="#757575"
        app:layout_constraintStart_toEndOf="@+id/textViewName"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

    <RadioGroup
        android:id="@+id/radioGroupGenders"
        android:layout_width="272dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@+id/textViewGender"
        app:layout_constraintTop_toBottomOf="@+id/editTextAge">

        <RadioButton
            android:id="@+id/radioButtonMale"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/textRadioMale" />

        <RadioButton
            android:id="@+id/radioButtonFemale"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/textRadioFemale" />

        <RadioButton
            android:id="@+id/radioButtonElse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textRadioElse" />
    </RadioGroup>

    <Spinner
        android:id="@+id/spinnerFrequency"
        android:layout_width="96dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:entries="@array/spinnerFrequencies"
        app:layout_constraintStart_toEndOf="@+id/textViewFrequency"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupGenders" />

    <SeekBar
        android:id="@+id/seekBarRating"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="368dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:max="10"
        android:progress="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRatingNum" />

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="128dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="72dp"
        android:onClick="onClickSubmit"
        android:text="@string/buttonTextSubmit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/checkBoxAgree"
        android:layout_width="372dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:text="@string/textCheckBox"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBarRating" />

</androidx.constraintlayout.widget.ConstraintLayout>