<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormDetailsActivity">

    <TextView
        android:id="@+id/textViewNameDetailsActivity"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="128dp"
        android:text="@string/textName"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewAgeDetailsActivity"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="32dp"
        android:text="@string/textAge"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNameDetailsActivity" />

    <TextView
        android:id="@+id/textViewGenderDetailsActivity"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="32dp"
        android:text="@string/textGender"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAgeDetailsActivity" />

    <TextView
        android:id="@+id/textViewFrequencyDetailsActivity"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="32dp"
        android:text="@string/textToastFrequency"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewGenderDetailsActivity" />

    <TextView
        android:id="@+id/textViewRatingDetailsActivity"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="32dp"
        android:text="@string/textToastRating"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewFrequencyDetailsActivity" />

    <TextView
        android:id="@+id/textViewFormAgreedDetailsActivity"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="32dp"
        android:text="@string/textCheckBoxStatus"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRatingDetailsActivity" />

    <Button
        android:id="@+id/buttonGoBackDetailsActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="128dp"
        android:onClick="onClickBackButton"
        android:text="@string/buttonTextGoBackFromDetails"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>